# StaticDynamicCppLibsIssues

./: CMakeLists.txt  README.md
DLL1/: CMakeLists.txt  PrintStaticState1.cpp  PrintStaticState1.h
DLL2/: CMakeLists.txt  PrintStaticState2.cpp  PrintStaticState2.h
StaticLibWithStaticVariable/: CMakeLists.txt  StaticVariable.cpp  StaticVariable.h
TestProgram/: CMakeLists.txt  main.cpp
